<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contato.ContatoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Base.Theme.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/str_contato"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--<EditText-->
            <!--android:id="@+id/input_name"-->
            <!--android:layout_width="313dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="36dp"-->
            <!--android:layout_marginEnd="2dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName"-->
            <!--android:hint="Nome Completo"-->
            <!--/>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name"
                style="@style/SantanderTextForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_completo"
                    android:maxEms="12" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email"
                style="@style/SantanderTextForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_name">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_phone"
                style="@style/SantanderTextForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                style="@style/SantanderTextForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"

                android:checked="true"
                android:text="@string/gostaria_de_cadastrar_me_email"
                android:textAllCaps="false"
                android:textColorLink="@color/colorRedLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_phone" />

            <Button
                android:id="@+id/button"
                style="@style/SntdButtonSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="32dp"

                android:text="@string/btn_enviar"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <!--<TextView-->
                <!--android:id="@+id/textView2"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->

                <!--android:layout_marginTop="8dp"-->

                <!--android:singleLine="false"-->
                <!--android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
            <!--Proin vitae justo sit amet tellus tristique fermentum non facilisis eros.-->
            <!--Sed porttitor tempus porta. Ut-->
            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
            <!--Proin vitae justo sit amet tellus tristique fermentum non facilisis eros.-->
            <!--Sed porttitor tempus porta. Ut-->
<!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
            <!--Proin vitae justo sit amet tellus tristique fermentum non facilisis eros.-->
            <!--Sed porttitor tempus porta. Ut-->
            <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit.-->
            <!--Proin vitae justo sit amet tellus tristique fermentum non facilisis eros.-->
            <!--Sed porttitor tempus porta. Ut"-->
                <!--android:textAllCaps="false"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/button" />-->


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>